fixed images stretching over the width of the screen

--- a/src/Features/Post/Content/Content.css
+++ b/src/Features/Post/Content/Content.css
@@ -6,7 +6,7 @@
 }
 
 .message-image {
-    width: auto;
+    max-width: 100%;
     height: auto;
     border-radius: 15px;
 }
